Ticket #1061: fix template and footer spacing.

--- a/sites/all/themes/doit/css/style.css
+++ b/sites/all/themes/doit/css/style.css
@@ -2650,7 +2650,7 @@ h2.block-title, h2.pane-title {
   margin-bottom: 10px;
 }
 
-.pane-member-profile-panel-pane-1 {
+.panel-one-three-one .panel-footer .panel-pane {
   margin-bottom: 0;
 }
 
